Plagiarism/src/main/java/by/bsu/project/parser/pascal/JPascal.java
package by.bsu.project.parser.pascal;

import by.bsu.project.general.ParseException;
import by.bsu.project.general.SimpleCharStream;
import by.bsu.project.model.Token;
import by.bsu.project.settings.Settings;

import java.io.*;
import java.util.Date;
import java.util.Vector;

public class JPascal implements JPascalConstants {

    static boolean verbose = false,
            quiet = false,
            report = false,
            ready = false,
            ck_syntax = false,
            out_syntax = false;

    static FileInputStream in;

    /**
     * The stream used to save the output file.
     */
    static PrintStream save;

    static Vector identifiers = new Vector();

    static Vector procedures = new Vector();
    /**
     * The new file containing the output of this tokeniser.
     */
    static File outputFile = null;

    /**
     * Keep track of the line number from the file read in. Used to print #line xxx in the outputFile.
     */
    static int lineNo = 1;
    static boolean seenNewLine = false;

    public static void main(String args[]) throws Exception {
        JPascal parser;
        JPascal.save = System.out;
        ready = true;
        ck_syntax = true;
        report = true;
        in = new FileInputStream("Pascal.pas");
        if (ready) {
            Token token;
            parser = new JPascal(in);
            if (ck_syntax) {
                try {
                    while (true) {
                        parser.Program();
                    }
                } catch (ParseException e) {
                    e.printStackTrace(System.err);
                }
            }
            if (report) {
                save.println("----------------------------------------------------------------------------------");
                generateReport(parser);
            }
            if (!ck_syntax && !report) {
                for (; ; ) {
                    token = parser.getNextToken();
                    out(kindOf(token));
                    if (kindOf(token).equals("<EOF>"))
                        break;
                }
            }
        }
    }

    public static void generateReport(JPascal parser) {
        Token token;
        try {
            for (; ; ) {
                token = parser.getNextToken();
                out(String.format("line:%03d-%03d column:%03d-%03d kind:%-15s lexeme:%-50s",
                        token.beginLine, token.endLine, token.beginColumn, token.endColumn, kindOf(token), token.image));
                if (kindOf(token).equals("<EOF>")) {
                    break;
                }
            }
        } catch (Exception e) {
            e.printStackTrace();
        }
    }

    static public void verbose(String message) {
        if (verbose) out(message);
    }

    static public void out(String message) {
        if (out_syntax) {
            if (seenNewLine)
                save.println();
            seenNewLine = false;
            save.print(message);
        }
    }

    static public void err(String message) {
        System.err.println(message);
    }

    public static String kindOf(Token token) {
        return JPascalConstants.tokenImage[token.kind];
    }


    public static void show(String message) {
        System.out.println(message);
    }

    static final public void Program() throws ParseException {
        try {
            if (outputFile != null)
                JPascal.save = new PrintStream(new FileOutputStream(outputFile));
            else
                save = System.out;
        } catch (IOException e) {
            Date day = new Date(System.currentTimeMillis());
            if (outputFile != null) {
                try {
                    String file = new String
                            (System.getProperty("user.home") + Settings.fileSep + "sherlock.log");
                    BufferedWriter bw = new BufferedWriter(new FileWriter(file, true));
                    bw.write(day + "-" + "Cannot write to: "
                            + outputFile.getAbsolutePath());
                    bw.newLine();
                    bw.close();
                } catch (IOException e2) {
                    if (outputFile != null)
                        System.err.println(day + "-" + "Cannot write to: "
                                + outputFile.getAbsolutePath());
                }
            } else System.err.println(day + "-" + "Cannot write to System.out");
            return;
        }

        Token program = null;
        if (jj_2_2(2)) {
            jj_consume_token(PROGRAM);
            program = identifier();
            if (jj_2_1(2)) {
                jj_consume_token(LPAREN);
                identifier_list();
                jj_consume_token(RPAREN);
            } else {
                ;
            }
            jj_consume_token(SEMICOLON);
            block();
            jj_consume_token(DOT);
        } else if (jj_2_3(2)) {
            jj_consume_token(0);
            if (program != null) {
                out("program: " + program.image);
            } else {
                out("eof");
                out(String.format("errors"));
                out(String.format("%d tokens presents in table", identifiers.size()));
                System.exit(0);
            }
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }

        save.flush();
        save.close();
    }

    static final public void block() throws ParseException {
        label_1:
        while (true) {
            if (jj_2_4(2)) {
                ;
            } else {
                break label_1;
            }
            parts();
        }
        compound_statement();
        out("block");
    }

    static final public void parts() throws ParseException {
        if (jj_2_5(2)) {
            label_declaration_part();
        } else if (jj_2_6(2)) {
            const_declaration_part();
        } else if (jj_2_7(2)) {
            type_declaration_part();
        } else if (jj_2_8(2)) {
            var_declaration_part();
        } else if (jj_2_9(2)) {
            subroutine_declaration_part();
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void label_declaration_part() throws ParseException {
        jj_consume_token(LABEL);
        jj_consume_token(NUMBER);
        label_2:
        while (true) {
            if (jj_2_10(2)) {
                ;
            } else {
                break label_2;
            }
            jj_consume_token(COMMA);
            jj_consume_token(NUMBER);
        }
        jj_consume_token(SEMICOLON);
        out("label_declaration_part");
    }

    static final public void const_declaration_part() throws ParseException {
        jj_consume_token(CONST);
        const_definition();
        label_3:
        while (true) {
            if (jj_2_11(2)) {
                ;
            } else {
                break label_3;
            }
            jj_consume_token(SEMICOLON);
            const_definition();
        }
        jj_consume_token(SEMICOLON);
        out("const_declaration_part");
    }

    static final public void const_definition() throws ParseException {
        identifier();
        jj_consume_token(EQ);
        _const();
        out("const_definition");
    }

    static final public void type_declaration_part() throws ParseException {
        jj_consume_token(TYPE);
        type_definition();
        label_4:
        while (true) {
            if (jj_2_12(2)) {
                ;
            } else {
                break label_4;
            }
            jj_consume_token(SEMICOLON);
            type_definition();
        }
        jj_consume_token(SEMICOLON);
        out("type_declaration_part");
    }

    static final public void type_definition() throws ParseException {
        identifier();
        jj_consume_token(EQ);
        type();
        out("type_definition");
    }

    static final public void type() throws ParseException {
        if (jj_2_14(2)) {
            jj_consume_token(UPARROW);
            identifier();
        } else if (jj_2_15(2)) {
            identifier();
            jj_consume_token(LBRACKET);
            simple_type();
            label_5:
            while (true) {
                if (jj_2_13(2)) {
                    ;
                } else {
                    break label_5;
                }
                jj_consume_token(COMMA);
                simple_type();
            }
            jj_consume_token(RBRACKET);
            jj_consume_token(OF);
            identifier();
        } else if (jj_2_16(2)) {
            jj_consume_token(SETOF);
            simple_type();
        } else if (jj_2_17(2)) {
            jj_consume_token(RECORD);
            field_list();
            jj_consume_token(END);
        } else if (jj_2_18(2)) {
            simple_type();
            out("type");
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void simple_type() throws ParseException {
        if (jj_2_20(2)) {
            identifier();
        } else if (jj_2_21(2)) {
            jj_consume_token(LPAREN);
            identifier();
            label_6:
            while (true) {
                if (jj_2_19(2)) {
                    ;
                } else {
                    break label_6;
                }
                jj_consume_token(COMMA);
                identifier();
            }
            jj_consume_token(RPAREN);
        } else if (jj_2_22(2)) {
            _const();
            jj_consume_token(DOTDOT);
            _const();
            out("simple_type");
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void _const() throws ParseException {
        if (jj_2_26(2)) {
            jj_consume_token(STRING);
        } else if (jj_2_27(2)) {
            if (jj_2_25(2)) {
                if (jj_2_23(2)) {
                    jj_consume_token(PLUS);
                } else if (jj_2_24(2)) {
                    jj_consume_token(MINUS);
                } else {
                    jj_consume_token(-1);
                    throw new ParseException();
                }
            } else {
                ;
            }
            _const2();
            out("const");
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void _const2() throws ParseException {
        if (jj_2_28(2)) {
            identifier();
        } else if (jj_2_29(2)) {
            jj_consume_token(NUMBER);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void field_list() throws ParseException {
        identifier_list();
        jj_consume_token(COLON);
        type();
        label_7:
        while (true) {
            if (jj_2_30(2)) {
                ;
            } else {
                break label_7;
            }
            jj_consume_token(SEMICOLON);
            identifier_list();
            jj_consume_token(COLON);
            type();
        }
        out("field_list");
    }

    static final public void var_declaration_part() throws ParseException {
        jj_consume_token(VAR);
        var_declaration();
        label_8:
        while (true) {
            if (jj_2_31(2)) {
                ;
            } else {
                break label_8;
            }
            jj_consume_token(SEMICOLON);
            var_declaration();
        }
        jj_consume_token(SEMICOLON);
        out("var_declaration_part");
    }

    static final public void var_declaration() throws ParseException {
        identifier_list();
        jj_consume_token(COLON);
        type();
        out("var_declaration");
    }

    static final public Vector identifier_list() throws ParseException {
        Vector identifier_list;
        identifier_list = new Vector();
        single_identifier(identifier_list);
        label_9:
        while (true) {
            if (jj_2_32(2)) {
                ;
            } else {
                break label_9;
            }
            jj_consume_token(COMMA);
            single_identifier(identifier_list);
        }
        out("identifier_list: " + identifier_list);
        {
            if ("" != null) return identifier_list;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Token identifier() throws ParseException {
        Token identifier;
        identifier = jj_consume_token(IDENTIFIER);
        identifiers.add(identifier);
        {
            if ("" != null) return identifier;
        }
        throw new Error("Missing return statement in function");
    }

    static final public void single_identifier(Vector identifier_list) throws ParseException {
        Token identifier;
        identifier = identifier();
        if (identifier_list != null) {
            identifier_list.add(identifier);
        }
    }

    static final public void subroutine_declaration_part() throws ParseException {
        if (jj_2_35(2)) {
            procedure_declaration();
            if (jj_2_33(2)) {
                jj_consume_token(SEMICOLON);
            } else {
                ;
            }
        } else if (jj_2_36(2)) {
            function_declaration();
            if (jj_2_34(2)) {
                jj_consume_token(SEMICOLON);
            } else {
                ;
            }
            out("subroutine_declaration_part");
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void procedure_declaration() throws ParseException {
        Token procedure;
        jj_consume_token(PROCEDURE);
        procedure = identifier();
        if (jj_2_37(2)) {
            formal_parameters();
        } else {
            ;
        }
        jj_consume_token(SEMICOLON);
        block();
        out("procedure_declaration: " + procedure);
        procedures.add(procedure);
    }

    static final public void function_declaration() throws ParseException {
        Token function;
        jj_consume_token(FUNCTION);
        function = identifier();
        if (jj_2_38(2)) {
            formal_parameters();
        } else {
            ;
        }
        jj_consume_token(COLON);
        if (jj_2_39(2)) {
            identifier();
        } else {
            ;
        }
        identifier();
        jj_consume_token(SEMICOLON);
        block();
        out("function_declaration: " + function);
        procedures.add(function);
    }

    static final public void formal_parameters() throws ParseException {
        jj_consume_token(LPAREN);
        param_section();
        label_10:
        while (true) {
            if (jj_2_40(2)) {
                ;
            } else {
                break label_10;
            }
            jj_consume_token(SEMICOLON);
            param_section();
        }
        jj_consume_token(RPAREN);
        out("formal_parameters");
    }

    static final public void param_section() throws ParseException {
        if (jj_2_42(2)) {
            if (jj_2_41(2)) {
                jj_consume_token(VAR);
            } else {
                ;
            }
            identifier_list();
            jj_consume_token(COLON);
            type();
        } else if (jj_2_43(2)) {
            jj_consume_token(FUNCTION);
            identifier_list();
            jj_consume_token(COLON);
            type();
        } else if (jj_2_44(2)) {
            jj_consume_token(PROCEDURE);
            identifier_list();
            out("param_section");
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void compound_statement() throws ParseException {
        jj_consume_token(BEGIN);
        labeled_statement();
        label_11:
        while (true) {
            if (jj_2_45(2)) {
                ;
            } else {
                break label_11;
            }
            jj_consume_token(SEMICOLON);
            labeled_statement();
        }
        jj_consume_token(END);
        out("compound_statement");
    }

    static final public void labeled_statement() throws ParseException {
        if (jj_2_46(2)) {
            jj_consume_token(NUMBER);
            jj_consume_token(COLON);
        } else {
            ;
        }
        statement();
        out("labeled_statement");
    }

    static final public void statement() throws ParseException {
        if (jj_2_57(2)) {
            if (jj_2_47(2)) {
                assign_statement();
            } else if (jj_2_48(2)) {
                procedure_call();
            } else if (jj_2_49(2)) {
                if_statement();
            } else if (jj_2_50(2)) {
                case_statement();
            } else if (jj_2_51(2)) {
                while_statement();
            } else if (jj_2_52(2)) {
                repeat_statement();
            } else if (jj_2_53(2)) {
                for_statement();
            } else if (jj_2_54(2)) {
                with_statement();
            } else if (jj_2_55(2)) {
                goto_statement();
            } else if (jj_2_56(2)) {
                compound_statement();
            } else {
                jj_consume_token(-1);
                throw new ParseException();
            }
        } else {
            ;
        }
        out("statement");
    }

    static final public void assign_statement() throws ParseException {
        identifier();
        infipo();
        jj_consume_token(ASSIGN);
        expr();
        out("assign_statement");
    }

    static final public void procedure_call() throws ParseException {
        identifier();
        if (jj_2_58(2)) {
            jj_consume_token(LPAREN);
            expr_list();
            jj_consume_token(RPAREN);
        } else {
            ;
        }
        out("procedure_call");
    }

    static final public void if_statement() throws ParseException {
        jj_consume_token(IF);
        expr();
        jj_consume_token(THEN);
        statement();
        if (jj_2_59(2)) {
            jj_consume_token(ELSE);
            statement();
        } else {
            ;
        }
        out("if_statement");
    }

    static final public void while_statement() throws ParseException {
        jj_consume_token(WHILE);
        expr();
        jj_consume_token(DO);
        statement();
        out("while_statement");
    }

    static final public void repeat_statement() throws ParseException {
        jj_consume_token(REPEAT);
        statement();
        label_12:
        while (true) {
            if (jj_2_60(2)) {
                ;
            } else {
                break label_12;
            }
            jj_consume_token(SEMICOLON);
            statement();
        }
        jj_consume_token(UNTIL);
        expr();
        out("repeat_statement");
    }

    static final public void for_statement() throws ParseException {
        jj_consume_token(FOR);
        identifier();
        infipo();
        jj_consume_token(ASSIGN);
        expr();
        if (jj_2_61(2)) {
            jj_consume_token(TO);
        } else if (jj_2_62(2)) {
            jj_consume_token(DOWNTO);
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        expr();
        jj_consume_token(DO);
        statement();
        out("for_statement");
    }

    static final public void with_statement() throws ParseException {
        jj_consume_token(WITH);
        identifier();
        infipo();
        label_13:
        while (true) {
            if (jj_2_63(2)) {
                ;
            } else {
                break label_13;
            }
            jj_consume_token(COMMA);
            identifier();
            infipo();
        }
        jj_consume_token(DO);
        statement();
        out("with_statement");
    }

    static final public void case_statement() throws ParseException {
        jj_consume_token(CASE);
        expr();
        jj_consume_token(OF);
        _case();
        label_14:
        while (true) {
            if (jj_2_64(2)) {
                ;
            } else {
                break label_14;
            }
            jj_consume_token(SEMICOLON);
            _case();
        }
        jj_consume_token(END);
        out("case_statement");
    }

    static final public void _case() throws ParseException {
        if (jj_2_65(2)) {
            jj_consume_token(NUMBER);
        } else if (jj_2_66(2)) {
            identifier();
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        jj_consume_token(COLON);
        statement();
    }

    static final public void goto_statement() throws ParseException {
        jj_consume_token(GOTO);
        jj_consume_token(NUMBER);
        out("goto_statement");
    }

    static final public void infipo() throws ParseException {
        if (jj_2_68(2)) {
            jj_consume_token(LBRACKET);
            expr();
            label_15:
            while (true) {
                if (jj_2_67(2)) {
                    ;
                } else {
                    break label_15;
                }
                jj_consume_token(COMMA);
                expr();
            }
            jj_consume_token(RBRACKET);
            infipo();
        } else {
            ;
        }
    }

    static final public void expr_list() throws ParseException {
        expr();
        label_16:
        while (true) {
            if (jj_2_71(2)) {
                ;
            } else {
                break label_16;
            }
            jj_consume_token(COMMA);
            expr();
        }
        out("expr_list");
    }

    static final public void expr() throws ParseException {
        simple_expr();
        if (jj_2_72(2)) {
            relop();
            simple_expr();
        } else {
            ;
        }
        out("expr");
    }

    static final public void relop() throws ParseException {
        if (jj_2_73(2)) {
            jj_consume_token(EQ);
        } else if (jj_2_74(2)) {
            jj_consume_token(LT);
        } else if (jj_2_75(2)) {
            jj_consume_token(GT);
        } else if (jj_2_76(2)) {
            jj_consume_token(NE);
        } else if (jj_2_77(2)) {
            jj_consume_token(GE);
        } else if (jj_2_78(2)) {
            jj_consume_token(LE);
        } else if (jj_2_79(2)) {
            jj_consume_token(IN);
            out("relop");
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
    }

    static final public void simple_expr() throws ParseException {
        if (jj_2_82(2)) {
            if (jj_2_80(2)) {
                jj_consume_token(PLUS);
            } else if (jj_2_81(2)) {
                jj_consume_token(MINUS);
            } else {
                jj_consume_token(-1);
                throw new ParseException();
            }
        } else {
            ;
        }
        term();
        label_17:
        while (true) {
            if (jj_2_83(2)) {
                ;
            } else {
                break label_17;
            }
            addop();
            term();
        }
        out("simple_expr");
    }
